# ai-resume

./: Procfile  README.md  pyproject.toml
ai-resume/: main.py
ai_resume/: app.py
static/: index.html
static/js/: bookmarklet.js
templates/: form.html
