[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling >= 1.11.0",
  "pip >= 22.0.0"
]


[project.scripts]
ai-resume = "ai_resume.app:main"


[project]
name            = "ai-resume"
version         = "0.0.1"
description     = "AI Resume is a tool for generating resumes using AI"
readme          = "README.md"
license         = "MIT"
requires-python = ">=3.8"

authors = [
  { name = "Christopher Woodall", email = "woodall.christopher@gmail.com" },
]
keywords = [ ]
classifiers = [ ]

dependencies = [
  "jinja2",
  "fastapi",
  "uvicorn",
  "gunicorn",
  "python-multipart",
  # "requests",
  # "beautifulsoup4",
  # "lxml",
]


[project.urls]
Source = "https://github.com/christopherwoodall/ai-resume"


[tool.hatch.build]
ignore-vcs   = false
reproducible = true
directory    = "dist"
include = [
  "ai_resume/",
  "README.md",
  "pyproject.toml",
]


[tool.hatch.metadata]
allow-direct-references = true
